[project]
name = "bob-dylan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "chromadb>=1.5.8",
    "duckduckgo-search<7.0.0",
    "edge-tts>=7.2.8",
    "fastapi>=0.136.1",
    "faster-whisper>=1.2.1",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "python-multipart>=0.0.27",
    "sentence-transformers>=5.4.1",
    "tavily-python>=0.7.24",
    "uvicorn>=0.46.0",
    "wikipedia>=1.4.0",
]
